compiler/test_files/typing/bad/testfile-arith-3.psc
class S { i32 a; };
i32 main() {
    S q;
    print(p-q);
}